Add PGN reader and MoveStack unit tests